static/base.css
@import 'values.css';

* {
    font-family: var(--font);
    font-size: var(--font-size);

    margin: 0;
    padding: 0;

    text-decoration: none;
}

a {
    color: var(--link-color);
}

body {
    background-color: #f0f0f0;
}

.bg {
    background-color: var(--bg-color);
}

.center-container {
    align-items: center;
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: center;
    width: 100%;
}

.center-table {
    margin-left: auto;
    margin-right: auto;
}

.content-wrapper {
    background-color: white;
    display: flex;
    flex-direction: column;
    gap: var(--gap);
    /* Have the page span almost all the height. */
    /* Looks weird and squashed when it's small on pages with less content. */
    height: 95vh;

    margin-left: auto;
    margin-right: auto;

    padding: var(--gap);
    width: 80%;
}

.input-group {
    align-items: center;
    display: flex;
    gap: var(--small-gap);;
}

@media (max-width: 768px) {
    .input-group {
        align-items: flex-start;
        flex-direction: column;
        gap: 0;
    }

    .input-group * {
        width: 100%;
    }
}

.input-group input,
.input-group textarea {
    flex-grow: 1;
    min-width: 0em;
}

.message {
    border-radius: var(--smaller-gap);;
    background-color: var(--bg-color);
    padding: var(--small-gap);;
}

#messages {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: var(--small-gap);;
}

.notable {
    font-weight: bold;
}

.no-select {
    user-select: none;
}

#special-anchors {
    background-color: var(--contrast-color);
}

.table-container {
    overflow: auto;
}

